Second push git

--- a/entretien.html
+++ b/entretien.html
@@ -69,7 +69,7 @@
     </div>
     </section>
 
-    <div class="card-container" data-aos="fade-in">
+    <div class="card-container" data-aos="fade-out">
         <div class="container">
         
         <a href="#gazon">
