--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="icon" type="image/svg+xml" href="content/logo/logo-favicon.svg">
     <title>La Roses des Vents</title>
 
     <link rel="stylesheet" href="css/style.css" />
@@ -24,31 +25,33 @@
 </head>
 <body>
     <header class="header">
-        <a href="index.html" class="logo">La Rose des Vents</a>
+        <a href="index.html" class="logo">
+            <img src="content/logo/logo-minimal-horizontale.svg" alt="">
+        </a>
         <div class="menu-toggle"></div>
         <nav>
             <ul>
                 <li><a href="index.html">Acceuil</a></li>
                 <li class="sub-menu"><a href="entretien.html">Entretien</a>
                     <ul>
-                        <li><a href="">Gazon</a></li>
-                        <li><a href="">Taille</a></li>
-                        <li><a href="">Débrousaillage</a></li>
-                        <li><a href="">Phytosanitaire/Engrais</a></li>
+                        <li><a href="entretien.html#gazon">Gazon</a></li>
+                        <li><a href="entretien.html#taille">Taille</a></li>
+                        <li><a href="entretien.html#debrousaillage">Débrousaillage</a></li>
+                        <li><a href="entretien.html#phyto">Phytosanitaire/Engrais</a></li>
                     </ul>
                 </li>
                 
-                <li class="sub-menu"><a href="#creation">Creation</a>
+                <li class="sub-menu"><a href="creation.html">Creation</a>
                     <ul>
-                        <li><a href="">Maçonnerie</a></li>
-                        <li><a href="">Arrosage automatique</a></li>
-                        <li><a href="">Plantation</a></li>
-                        <li><a href="">Terrassement</a></li>
+                        <li><a href="creation.html#maconnerie">Maçonnerie</a></li>
+                        <li><a href="creation.html#arrosage">Arrosage automatique</a></li>
+                        <li><a href="creation.html#plantation">Plantation</a></li>
+                        <li><a href="creation.html#terrassement">Terrassement</a></li>
                     </ul>
                 </li>
 
-                <li><a href="#">Galerie</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="galerie.html">Galerie</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="clearfix"></div>
@@ -72,7 +75,7 @@
 <div class="container">
 
     <div class="img-content-1" data-aos="fade-in">
-        <img src="content/logo.svg" alt="">
+        <img src="content/logo/logo.svg" alt="">
     </div>
 
     <div class="content-1" data-aos="fade-in">
@@ -124,6 +127,7 @@
 
 
 <footer>
+    <img src="content/logo/logo-minimal-noir.svg" alt="">
     <ul>
         <li><a href="#">Acceuil</a></li>
         <li><a href="#entretient">Entretient</a></li>
