--- a/entretien.html
+++ b/entretien.html
@@ -150,6 +150,10 @@
         </div>
         
       </div>
+
+      <div class="button">
+        <a href="contact.html">Contact Nous !</a>
+    </div>
 </section>
 
 <footer>
