--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
 <div class="container">
 
     <div class="img-content-1" data-aos="fade-in">
-        <img src="content/logo/logo.svg" alt="">
+        <div class="img-1">
+            <img src="content/logo/logo.svg" alt="">
+        </div>
     </div>
 
     <div class="content-1" data-aos="fade-in">
@@ -107,7 +109,12 @@
     </div>
   </div>
 
+<div class="button">
+    <a href="contact.html">Contact Nous !</a>
+</div>
+
 </section>
+
 <div class="contact-box">
         <div class="contact">
 
