--- a/creation.html
+++ b/creation.html
@@ -149,6 +149,9 @@
         </div>
         
       </div>
+      <div class="button">
+        <a href="contact.html">Contact Nous !</a>
+    </div>
 </section>
 
 <footer>
